apps/fumadocs/content/docs-v/1.0.0/adapters/loops.mdx
---
title: Loops
description: Trigger a published Loops transactional email for one recipient, with metadata delivered as dataVariables.
icon: loops
---

## Capabilities

| Repeated headers | Idempotency | Scheduling | Personalized |
| --- | --- | --- | --- |
| No | `none` | No | `expanded` |

These values come from the adapter's exported `capabilities` declaration. The [field support matrix](/docs/adapters/field-support) covers normalized message fields.

The Loops adapter calls the [Loops transactional API](https://loops.so/docs/api-reference/send-transactional-email) with plain `fetch`. It triggers a published transactional email by `transactionalId` for exactly one recipient and hands your message to the template as `dataVariables`.

<ProviderBadge adapter="loops" />

## Configure

Create an API key in Loops with permission to send transactional email, then publish the transactional email and copy its `transactionalId`.

```ts title="lib/email.ts"
import { createEmailClient } from "@opencoredev/email-sdk";
import { loops } from "@opencoredev/email-sdk/loops";

export const email = createEmailClient({
  adapters: [
    loops({
      apiKey: process.env.LOOPS_API_KEY!,
      transactionalId: process.env.LOOPS_TRANSACTIONAL_ID!,
    }),
  ],
});
```

<TypeTable
  type={{
    apiKey: {
      description: "Loops API key.",
      type: "string",
      required: true,
    },
    transactionalId: {
      description: "Published transactional email to render. Must be non-empty; the adapter throws at construction otherwise.",
      type: "string",
      required: true,
    },
    baseUrl: {
      description: "Override the API origin, e.g. for a proxy.",
      type: "string",
      default: '"https://app.loops.so"',
    },
    fetch: {
      description: "Custom fetch implementation for tests or special runtimes.",
      type: "typeof fetch",
    },
  }}
/>

## Send

The Loops template renders the email. The adapter merges `subject`, `html`, `text`, `from`, and every `metadata` key into `dataVariables`; your template decides which of them appear. Exactly one `to` recipient is allowed per send.

```ts
const result = await email.send({
  from: "Acme <hello@acme.com>",
  to: "user@example.com",
  subject: "Reset your password",
  html: "<p>Use the button below to reset your password.</p>",
  metadata: {
    firstName: "Ada",
    resetUrl: "https://acme.com/reset/abc123",
  },
});

console.log(result.id); // Loops id (or transactionalId) from the response
```

Attachments are supported and sent as `{ filename, contentType, data }` with base64-encoded content.

<Callout type="warn" title="Attachments need account enablement">
  Loops only accepts transactional attachments on accounts where the capability has been enabled.
  Without it, sends with attachments fail at the API. Also note `cc`, `bcc`, `replyTo`, `headers`,
  and `tags` throw an `EmailValidationError` before any request; see
  [field support](/docs/adapters/field-support).
</Callout>

## Verify from the CLI

```bash
LOOPS_API_KEY="..." LOOPS_TRANSACTIONAL_ID="cm..." npx email-sdk doctor --adapter loops
```

```bash
LOOPS_API_KEY="..." LOOPS_TRANSACTIONAL_ID="cm..." npx email-sdk send \
  --adapter loops \
  --from "Acme <hello@acme.com>" \
  --to user@example.com \
  --subject "Loops smoke test" \
  --text "It works" \
  --dry-run
```

Drop `--dry-run` to trigger one real template send and confirm the API key and published transactional email are live.
